[tool.poetry]
name = "toto"
version = "0.1.0"
description = ""
authors = ["Andrei Malyhin <andrew.malyhin@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "^3.8.1"
psycopg = "^3.0.8"
pytest = "^7.0.0"
coverage = "^6.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
